# integration-tests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
env_setup/: docker-compose.yml
env_setup/scripts/: create-aws-profile.sh  docker-compose.sh  generate-env.sh  reset_db.sh  start.sh  stop.sh
env_setup/scripts/config/: seeding.json
src/api_client/: client.py  config.py  token_manager.py
src/utils/: aws_utils.py
src/utils/findings/: findings_queries.py  findings_utils.py
src/utils/ticketing/: remediation_queries.py  ticketing_queries.py  ticketing_utils.py
src/utils/ticketing/clients/: clients.py  jira.py
tests/: conftest.py
tests/remediation/: conftest.py  test_endpoint_fields.py  test_endpoint_keys.py  test_open_tickets.py
