[project]
name = "intergation-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atlassian-jwt>=3.0.0",
    "boto3>=1.36.14",
    "jinja2>=3.1.5",
    "pycognito>=2024.5.1",
    "pydantic==1.10.18",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "sqlalchemy==1.4.2",
]

[tool.poetry]
name = "intergation-tests"
version = "0.1.0"
description = "Add your description here"
authors = ["RnD <rnd@seemplicity.io>"]
readme = "README.md"


[tool.poetry.package]
include = ["src/**/*"]


env = [
    "AWS_PROFILE=development",
    "AWS_ENDPOINT_URL_DYNAMODB=http://localhost:8900",
]
